# Copyright 2013 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/toolchain/ohos/ohos_toolchain.gni")

ohos_clang_toolchain("ohos_clang_arm") {
  sysroot = "${musl_sysroot}"
  lib_dir = "usr/lib/arm-linux-ohos"
  rust_abi_target = "armv7-unknown-linux-ohos"
  toolchain_args = {
    current_cpu = "arm"
  }
}

ohos_clang_toolchain("ohos_clang_arm64") {
  sysroot = "${musl_sysroot}"
  lib_dir = "usr/lib/aarch64-linux-ohos"
  rust_abi_target = "aarch64-unknown-linux-ohos"
  toolchain_args = {
    current_cpu = "arm64"
  }
}

ohos_clang_toolchain("ohos_clang_x86_64") {
  sysroot = "${musl_sysroot}"
  lib_dir = "usr/lib/x86_64-linux-ohos"
  rust_abi_target = "x86_64-unknown-linux-ohos"
  toolchain_args = {
    current_cpu = "x86_64"
  }
}

ohos_clang_toolchain("ohos_clang_loongarch64") {
  sysroot = "${musl_sysroot}"
  lib_dir = "usr/lib/loongarch64-linux-ohos"
  rust_abi_target = "loongarch64-linux-ohos"
  toolchain_args = {
    current_cpu = "loongarch64"
  }
}

ohos_clang_toolchain("ohos_clang_riscv64") {
  sysroot = "${musl_sysroot}"
  lib_dir = "usr/lib/riscv64-linux-ohos"
  rust_abi_target = "riscv64-unknown-linux-gnu"
  toolchain_args = {
    current_cpu = "riscv64"
  }
}

ohos_clang_toolchain("ohos_clang_mipsel") {
  sysroot = "${musl_sysroot}"
  if (is_legacy) {
    lib_dir = "usr/lib/mipsel-linux-ohos/nanlegacy"
  } else {
    lib_dir = "usr/lib/mipsel-linux-ohos"
  }
  rust_abi_target = "mipsel-unknown-linux-gnu"
  toolchain_args = {
    current_cpu = "mipsel"
  }
}
